<resources>
    <string name="app_name">Bite Builder</string>
    <string name="title_meal_plan">Meal Plan</string>
    <string name="title_grocery_list">Grocery List</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_checker">Meal Checker</string>
    <string name="title_settings">Settings</string>
    <string name="title_meal_detail">Details</string>
    <string name="title_add_meals">Add Meals</string>
    <string name="steak_meal">Steak Meal</string>
    <string name="action_close">Close</string>
    <string name="action_done">Done</string>
    <string name="action_reset">Reset</string>
</resources>
